<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="EmailHint">Email</string>
    <string name="EmailDescr">Digite o email</string>
    <string name="SenhaHint">Senha</string>
    <string name="SenhaDescr">Digite a senha</string>
    <string name="CadastrarOpcao">Cadastre-se</string>
    <string name="BotaoEntrar">Entrar</string>
    <string name="BotaoEntrarDescr">Botão entrar</string>
    <string name="NomeHintCadastro">Nome</string>
    <string name="BotaoCadastrar">Cadastrar</string>
    <string name="BotaoCadastrarDescr">Botão Cadastrar</string>
    <string name="NomeDescr">Digitre o nome do usuário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomeUser">Nome do usuário</string>
    <string name="BotaoAbrirGaleria">Abrir Galeria</string>
    <string name="BotaoAbrirCamera">Abrir Camera</string>
    <string name="FiltroDescricao">Descrição</string>
    <string name="NomeFiltro">Filtro</string>
</resources>